Now extends ldap

--- a/src/main/resources/shib-authentication.properties
+++ b/src/main/resources/shib-authentication.properties
@@ -3,9 +3,9 @@
 ##    Guanxi Authentication Properties
 ##
 ########################################################
-auth.type.shib.impl=org.guanxi.sp.guard.blackboard.GuanxiAuthenticator
-auth.type.shib.uid_attribute=cn
-auth.type.shib.create_user=false
-auth.type.shib.guanxi_guard_cookie_name_header=GUANXI_GUARD_COOKIE_NANE
-auth.type.shib.guanxi_guard_attribute_prefix=HTTP_
-auth.type.shib.error_page=/WEB-INF/guanxi_sp_guard/jsp/sp_error.jsp
+auth.type.ldap.impl=org.guanxi.sp.guard.blackboard.GuanxiAuthenticator
+auth.type.ldap.uid_attribute=cn
+auth.type.ldap.create_user=false
+auth.type.ldap.guanxi_guard_cookie_name_header=GUANXI_GUARD_COOKIE_NANE
+auth.type.ldap.guanxi_guard_attribute_prefix=HTTP_
+auth.type.ldap.error_page=/WEB-INF/guanxi_sp_guard/jsp/sp_error.jsp
